# hermes-agent

./: logging_setup.py  model_tools.py  run_agent.py  toolsets.py
.github/workflows/: contributor-check.yml
agent/: anthropic_adapter.py  auxiliary_client.py  prompt_builder.py  telemetry.py
cron/: jobs.py  scheduler.py
docker/: entrypoint.sh
gateway/: config.py  platform_registry.py  run.py  stream_consumer.py
hermes_cli/: commands.py  config.py  gateway.py  myah_overrides.py  platforms.py  plugins.py  status.py  tools_config.py  web_server.py
honcho_integration/: session.py
plugins/myah-hermes-plugin/: CHANGELOG.md  README.md  pyproject.toml
plugins/myah-hermes-plugin/myah_hermes_plugin/: __init__.py  sentry_init.py
plugins/myah-hermes-plugin/myah_hermes_plugin/myah_admin/: __init__.py
plugins/myah-hermes-plugin/myah_hermes_plugin/myah_admin/dashboard/: _common.py  _providers.py  _sessions_and_lifecycle.py  _skills_plugins_mcp.py  _soul_and_config.py  plugin_api.py
plugins/myah-hermes-plugin/myah_hermes_plugin/myah_platform/: __init__.py  adapter.py  runtime_admin.py
plugins/myah-hermes-plugin/myah_hermes_plugin/runtime_extensions/: __init__.py  streaming_callbacks.py
plugins/myah-hermes-plugin/tests/: conftest.py  test_active_provider_endpoint.py  test_adapter_chat_active_provider_sync.py  test_adapter_switch_model_failure.py  test_cron_approval.py  test_myah_adapter.py  test_myah_confirm_dispatch.py  test_myah_platform_contract.py  test_myah_platform_toolsets.py  test_streaming_callbacks.py
scripts/: release.py
tests/: test_logging_setup.py  test_myah_packaging_metadata.py  test_run_agent.py  test_toolsets.py
tools/: approval.py  cronjob_tools.py  file_operations.py  mcp_tool.py  render_ui.py  secrets_tool.py  send_message_tool.py  skill_manager_tool.py  skills_guard.py  skills_tool.py
(+59 files in other folders)
