[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "myah-hermes-plugin"
version = "0.1.0"
description = "Myah platform connector for Hermes Agent"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "hermes-agent",
    "aiohttp>=3.9,<4",
]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-asyncio>=0.23"]

[project.scripts]
myah-hermes-plugin = "myah_hermes_plugin._cli:main"

[project.entry-points."hermes_agent.plugins"]
myah-platform = "myah_hermes_plugin.myah_platform:register"

[tool.setuptools.packages.find]
include = ["myah_hermes_plugin", "myah_hermes_plugin.*"]
