[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "myah-hermes-plugin"
version = "0.1.0"
description = "Myah platform connector for Hermes Agent"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "hermes-agent",
    "aiohttp>=3.9,<4",
]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-asyncio>=0.23"]

[project.entry-points."hermes_agent.plugins"]
# Per Hermes plugin docs (website/docs/guides/build-a-hermes-plugin.md):
# entry-point value is the MODULE path. Hermes' _load_entrypoint_module
# returns ep.load() (the module), then getattr(module, "register") finds
# the callback. Pointing at "module:function" returns the function
# directly, which then fails Hermes' getattr(module, "register") check
# with "no register() function".
myah-platform = "myah_hermes_plugin.myah_platform"

[tool.setuptools.packages.find]
include = ["myah_hermes_plugin", "myah_hermes_plugin.*"]
